[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cra-environment"
version = "1.0.0"
description = "Contextual Reinforcement Autocomplete OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "openenv-core",
    "openai",
    "python-dotenv",
]

[project.scripts]
server = "src.server:main"
